--- a/ChatWave/Profile/templates/songplayer.html
+++ b/ChatWave/Profile/templates/songplayer.html
@@ -52,7 +52,7 @@
         </section>
 
         <div class="custom-player">
-            <audio id="audio-player">
+            <audio id="audio-player" volume="0.5">
                 <source src="{{ clickedsong.song.url }}" type="audio/mpeg">
                 Your browser does not support the audio element.
             </audio>
