--- a/ChatWave/Profile/templates/profile.html
+++ b/ChatWave/Profile/templates/profile.html
@@ -8,7 +8,7 @@
     <title>Profile Page</title>
     <link rel="stylesheet" href="{% static 'profilestyle.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     
 </head>
 <body>
@@ -297,7 +297,6 @@
                     },
                     body: JSON.stringify({ image_url: result }),
                 });
-                return "success"; 
 
             } else {
                 throw new Error(result.error.message); 
